# pldmd

./: CMakeLists.txt  meson.build
include/: base.hpp  effecter.hpp  numeric_effecter.hpp  numeric_sensor.hpp  pdr_manager.hpp  platform.hpp  pldm.hpp  sensor.hpp  state_effecter_handler.hpp  state_sensor_handler.hpp  utils.hpp
pldmd_meson_build/: meson.build  meson_options.txt
pldmd_meson_build/subprojects/: boost_1_76_0.wrap  fmt.wrap  mctpwplus.wrap  phosphor-logging.wrap  sdbusplus.wrap  sdeventplus.wrap  span-lite.wrap
pldmd_meson_build/subprojects/boost_1_76_0/: meson.build
pldmd_meson_build/subprojects/phosphor-logging/: meson.build
pldmd_meson_build/subprojects/phosphor-logging/subprojects/: phosphor-dbus-interfaces.wrap
src/: base.cpp  firmware_update.cpp  fru_support.cpp  fwu_inventory.cpp  numeric_effecter.cpp  numeric_effecter_handler.cpp  numeric_sensor.cpp  numeric_sensor_handler.cpp  pdr_manager.cpp  pldmd.cpp  state_effecter_handler.cpp  state_sensor_handler.cpp  thresholds.cpp
subprojects/: libpldm.wrap  mctpwplus.wrap  phosphor-dbus-interfaces.wrap  sdbusplus.wrap
subprojects/packagefiles/dbus_intf/: 0029-Add-D-Bus-interfaces-for-PLDM-FW-update.patch  0033-update-meson-build-for-PLDM-FWU-interfaces.patch  meson.build
subprojects/packagefiles/phosphor_log_patch/: meson.build
